2007-11-26  Rich Kilmer <rich@infoether.com>

  * lib/rubygems/version.rb: Fix bug 15948 with version bump
  * test/test_gem_version.rb: Test for bug 15948 with version bump
  * util/gem_prelude.rb: wrap init code with exception handler
  and skip badly formed directory names

2007-11-23  Rich Kilmer <rich@infoether.com>

  * lib/rubygems.rb: Centralize all CONFIG options into Hash
  Gem::ConfigMap with keys as symbols, change all references
  to CONFIG to ConfigMap
  * lib/rubygems/require_paths_builder.rb: Added to support 
  building .require_paths file
  * lib/rubygems/installer.rb: Add building of .require_paths if
  needed
  * lib/rubygems/platform.rb: Use new ConfigMap hash for arch
  * lib/rubygems
  * util/gem_prelude.rb: new gem prelude for Ruby 1.9
  * test/test_gem_installer.rb: change to use ConfigMap hash
  * test/gemutilities.rb: change to use ConfigMap hash
  
2007-11-21  Daniel Berger <djberg96@gmail.com>

   * lib/rubygems/platform.rb: Gem::Platform.new now returns
   Gem::Platform.local if the arch matches Gem::Platform::CURRENT. 
   Bugs #15815 and #15782 submitted by Daniel Berger.

2007-11-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/platform.rb: Handle bare 'mswin32' platform's CPU.

2007-11-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems_version.rb: 0.9.5.

2007-11-16  Eric Hodel  <drbrain@segment7.net>

	* test/gemutilities: Add a legacy platform gem to the default test
	gems list.
	* lib/rubygems/specification.rb: Add Gem::Specification#original_name
	for legacy purposes
	* lib/rubygems/indexer.rb: Use #original_name to make the indexer
	backwards compatible.
	* lib/rubygems/master_index_builder.rb: Reduce memory consumption.

2007-11-13  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems_version.rb: 0.9.4.7 beta.
	* lib/rubygems.rb: Patch for RUBY_FRAMEWORK for OS X 10.5.  Patch
	submitted by Laurent Sansonetti.
	* lib/rubygems.rb: cygwin, djgpp, mingw are Windows platforms.  Fixes